# Accessible-Math-Reader

./: .gitignore  app.py  pyproject.toml
accessible_math_reader/: __init__.py  cli.py  config.py  reader.py
accessible_math_reader/braille/: __init__.py  nemeth.py  ueb.py
accessible_math_reader/core/: __init__.py  accessibility_contract.py  aria_navigator.py  aria_renderer.py  parser.py  renderer.py  semantic.py
accessible_math_reader/plugins/: __init__.py  base.py
accessible_math_reader/speech/: __init__.py  engine.py  rules.py
output/: Function.brf  integral.brf  math-braille (1).brf
src/: braille_converter.py  latex_parser.py  speech_converter.py
static/audio/: output.ssml
static/css/: style.css
static/js/: app.js
templates/: index.html
